[gd_scene load_steps=2 format=3 uid="uid://cs8xpadxy5ph2"]

[ext_resource type="Script" path="res://scripts/UI/Cadastro.gd" id="1_qd25q"]

[node name="Cadastro" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_qd25q")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 362.0
offset_top = 78.0
offset_right = 753.0
offset_bottom = 133.0
theme_override_font_sizes/font_size = 40
text = "Cadastro de Jogador"

[node name="NomeJogador" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 383.0
offset_top = 190.0
offset_right = 723.0
offset_bottom = 221.0
placeholder_text = "Digite seu nome"

[node name="ButtonCadastroJogador" type="Button" parent="."]
layout_mode = 0
offset_left = 498.0
offset_top = 257.0
offset_right = 582.0
offset_bottom = 288.0
text = "Cadastrar"

[node name="FeedbackCadastro" type="Label" parent="."]
layout_mode = 0
offset_left = 383.0
offset_top = 324.0
offset_right = 722.0
offset_bottom = 355.0
